@@ -5,7 +5,9 @@ Changelog
 1.1.2 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Improve error reporting for crontab component.
+
+- Fix error ordering.
 
 
 1.1.1 (2016-01-11)
